--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A collection of homework's for CS249 at SUNY Polytechnic",
   "main": "src/server.js",
   "scripts": {
-    "start": "npm run build && npm run server",
-    "server": "node dist/server.js",
+    "start": "npm run build && npm run serve",
+    "serve": "node dist/server.js",
+    "watch-node": "nodemon dist/server.js",
     "build": "babel src -s -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +19,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "express": "^4.16.3"
+    "config": "^2.0.1",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
+    "nodemon": "^1.18.4"
   }
 }
