--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "A collection of homework's for CS249 at SUNY Polytechnic",
   "main": "src/server.js",
   "scripts": {
-    "start": "npm run build && npm run serve",
+    "start": "npm run serve",
     "serve": "node dist/server.js",
-    "watch-node": "nodemon dist/server.js",
-    "build": "babel src -s -d dist",
+    "watch": "babel-watch src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gabe Kuslansky",
@@ -22,7 +21,9 @@
     "config": "^2.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
-    "nodemon": "^1.18.4"
+    "express-session": "^1.15.6"
+  },
+  "devDependencies": {
+    "babel-watch": "^2.0.7"
   }
 }
