--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run serve",
     "serve": "node dist/server.js",
+    "build": "babel src -s -d dist",
     "watch": "babel-watch src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
