--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "config": "^2.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6"
+    "express-session": "^1.15.6",
+    "multer": "^1.3.1"
   },
   "devDependencies": {
     "babel-watch": "^2.0.7"
